--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
     // "compilerOptions": { }
     "compilerOptions": { 
         "isolatedModules":  true,
-        "lib": ["ESNext"]
+        "lib": ["ESNext"],
+        "strict": true,
+        
     }
     
 }
