Add support for parsing function call

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,10 @@
           "runtimeArgs": [
             "--inspect-brk",
             "${workspaceRoot}/node_modules/.bin/jest",
-            "--runInBand"
+            "--runInBand",
+            "./compiler/src/parser/parser.test.ts",
+            "-t",
+            "Function Call test"
           ],
           "console": "integratedTerminal",
           "internalConsoleOptions": "neverOpen",
