--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "jest",
-    "test:debug" : "node --inspect-brk ./node_modules/.bin/jest -i"
+    "test:debug": "node --inspect-brk ./node_modules/.bin/jest -i"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
     "@swc/jest": "^0.2.20",
     "@types/jest": "^27.4.1",
     "jest": "^27.5.1"
+  },
+  "dependencies": {
+    "compiler": "link:"
   }
 }
