--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "clone": "^2.1.2",
     "compiler": "link:",
-    "deep-equal": "^2.0.5"
-  }
+    "deep-equal": "^2.0.5",
+    "llvm-bindings": "^0.3.6"
+  },
+  "type": "module"
 }
