--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  // "compilerOptions": { }
   "compilerOptions": {
     "isolatedModules": true,
     "lib": ["ESNext"],
     "strict": true,
+    "esModuleInterop": true
   }
 }
