--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/clone": "^2.1.1",
     "@types/deep-equal": "^1.0.1",
     "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
     "jest": "^27.5.1"
   },
   "dependencies": {
