Add support for deSugaring compiler provided fn

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "clone": "^2.1.2",
     "compiler": "link:",
     "deep-equal": "^2.0.5",
-    "llvm-bindings": "^0.3.6"
+    "llvm-bindings": "^0.3.6",
+    "xstate": "^4.32.1"
   },
   "type": "module"
 }
